re PR c++/51186 (declaring main() with auto but without --std=c++11 gives inconsistent error messages)

PR c++/51186
	* decl.c (grokdeclarator): Improve C++98 trailing return diagnostic.

From-SVN: r181455